full-moon/tests/roblox_cases/fail/parser/string-interpolation-double-brace-recovery/source.lua
local _ = `2 + 2 = {{2 + 2}}`
